[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm",
    "ipykernel",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "black",
    "pre-commit",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py311']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
