[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm",
    "ipykernel",
]


dependency-groups.dev = [
    "pytest",
    "ruff",
    "black",
    "pre-commit",
]

[tool.ruff]
line-length = 150
select = ["E", "F", "I", "W"]
ignore = []

[tool.black]
line-length = 150
target-version = ['py311']

